--- a/src/components/login-button/LoginButton.scss
+++ b/src/components/login-button/LoginButton.scss
@@ -9,6 +9,7 @@
     font-size: 1em;
     outline: none;
     cursor: pointer;
+    background: white;
     &:hover {
         color: gray;
         transition: color 0.5s ease;
