--- a/src/components/section-1/Section-1.scss
+++ b/src/components/section-1/Section-1.scss
@@ -63,3 +63,28 @@
         }
     }
 }
+
+@media screen and (max-width: 600px) {
+    .section-1 {
+        &__title {
+            font-size: 3em;
+            line-height: 60px;
+            &_red:after {
+                bottom: 1px;
+            }
+        }
+        &__about {
+            width: 100%;
+        }
+        &__button {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 50px;
+        }
+        &__container {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+    }
+}
