--- a/src/components/login-button/LoginButton.scss
+++ b/src/components/login-button/LoginButton.scss
@@ -17,3 +17,8 @@
         transition: color 0.5s ease;
     }
 }
+@media screen and (max-width: 600px) {
+    .login-button {
+        text-align: center;
+    }
+}
